--- a/package.json
+++ b/package.json
@@ -44,8 +44,11 @@
     "@tailwindcss/vite": "^4.1.12",
     "@vitejs/plugin-vue": "^6.0.1",
     "daisyui": "^5.1.5",
+    "imask": "^7.6.1",
     "lucide-vue-next": "^0.542.0",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "vee-validate": "^4.15.1",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@nuxt/devtools": "^2.6.3",
