implement unit test

--- a/package.json
+++ b/package.json
@@ -62,9 +62,13 @@
     "@storybook/builder-vite": "^9.1.4",
     "@storybook/vue3-vite": "^9.1.4",
     "@types/node": "latest",
+    "@vue/test-utils": "^2.4.6",
     "changelogen": "^0.6.2",
     "eslint": "^9.34.0",
     "eslint-plugin-storybook": "9.1.4",
+    "happy-dom": "^18.0.1",
+    "i18n-iso-countries": "^7.14.0",
+    "libphonenumber-js": "^1.12.15",
     "nuxt": "^4.0.3",
     "storybook": "^9.1.4",
     "typescript": "~5.9.2",
