chore: update configuration files
- Add .envrc to .gitignore
- Update .npmrc with GitHub package registry configuration
- Reorganize Tailwind CSS setup in module.ts

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,4 @@
+@boilerplatepowa:registry=https://npm.pkg.github.com
+//npm.pkg.github.com/:_authToken=${PACKAGE_TOKEN}
 shamefully-hoist=true
 strict-peer-dependencies=false
