--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,3 @@
+# GitHub Packages Configuration
 @boilerplatepowa:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=${PACKAGE_TOKEN}
-shamefully-hoist=true
-strict-peer-dependencies=false
+//npm.pkg.github.com/:_authToken=${GITHUB_TOKEN}
