--- a/package.json
+++ b/package.json
@@ -35,9 +35,30 @@
     "build-storybook": "storybook build",
     "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "test": "vitest run",
     "test:watch": "vitest watch",
-    "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit"
+    "test:coverage": "vitest run --coverage",
+    "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit",
+    "test:ci": "npm run lint && npm run test:types && npm run test",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "build": "npm run prepack",
+    "build:analyze": "npm run build && npm run bundle:analyze",
+    "bundle:analyze": "npx bundle-analyzer dist/",
+    "bundle:size": "npm run build && du -sh dist/",
+    "security:audit": "npm audit --audit-level moderate",
+    "security:fix": "npm audit fix",
+    "prepare:release": "npm run test:ci && npm run build && npm run security:audit",
+    "publish:github": "npm run prepare:release && npm publish --registry=https://npm.pkg.github.com",
+    "publish:github:script": "tsx scripts/publish-github.ts",
+    "docs:build": "cd playground && npm run generate",
+    "docs:preview": "cd playground && npm run preview",
+    "storybook:build": "storybook build",
+    "storybook:preview": "storybook dev -p 6006",
+    "storybook:deploy": "npm run storybook:build && npm run docs:deploy:storybook",
+    "storybook:deploy:script": "tsx scripts/deploy-storybook.ts",
+    "docs:deploy:storybook": "gh-pages -d storybook-static -t true"
   },
   "dependencies": {
     "@nuxt/kit": "^4.0.3",
@@ -73,6 +94,7 @@
     "storybook": "^9.1.4",
     "typescript": "~5.9.2",
     "vitest": "^3.2.4",
-    "vue-tsc": "^3.0.6"
+    "vue-tsc": "^3.0.6",
+    "gh-pages": "^6.1.1"
   }
 }
