--- a/package.json
+++ b/package.json
@@ -39,8 +39,9 @@
     "test": "vitest run",
     "test:watch": "vitest watch",
     "test:coverage": "vitest run --coverage",
-    "test:types": "vue-tsc --noEmit && cd playground && vue-tsc --noEmit",
-    "test:ci": "npm run lint && npm run test:types && npm run test",
+    "test:types": "npm run dev:prepare && vue-tsc --noEmit && cd playground && vue-tsc --noEmit",
+    "test:types:module": "vue-tsc --noEmit",
+    "test:ci": "npm run lint && npm run test:types:module && npm run test",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "build": "npm run prepack",
