--- a/package.json
+++ b/package.json
@@ -88,6 +88,8 @@
         "@vue/test-utils": "^2.4.6",
         "changelogen": "^0.6.2",
         "eslint": "^9.34.0",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.4",
         "eslint-plugin-storybook": "9.1.4",
         "gh-pages": "^6.1.1",
         "happy-dom": "^18.0.1",
