feat: add automated GitHub Packages publishing to CI/CD pipeline
- Enhanced release.yml with proper permissions for package publishing
- Added publishConfig to package.json for GitHub Packages registry
- Removed duplicate workflows (ci-cd.yml, pr-checks.yml, ci.yml)
- Created comprehensive documentation:
  - CI/CD implementation guide
  - Workflows reference card
  - Deployment checklist
  - Getting started guide
- Updated README with publishing quick start
- Maintained clean modular workflow structure (quality-gates, testing, release)

Publishing now triggered automatically on version tags (v*) with full validation

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,10 @@ on:
                 required: true
                 type: string
 
+permissions:
+    contents: write
+    packages: write
+
 env:
     NODE_VERSION: '22'
     REGISTRY_URL: 'https://npm.pkg.github.com'
