fix: add Tailwind CSS v4 setup documentation and improve module configuration

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
         ".": {
             "types": "./dist/types.d.mts",
             "import": "./dist/module.mjs"
+        },
+        "./styles": {
+            "import": "./dist/runtime/assets/main.css"
         }
     },
     "main": "./dist/module.mjs",
