--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,6 @@
 {
     "private": true,
-    "name": "my-module-playground",
+    "name": "nuxt-design-system-playground",
     "type": "module",
     "scripts": {
         "dev": "nuxi dev",
@@ -8,6 +8,9 @@
         "generate": "nuxi generate"
     },
     "dependencies": {
-        "nuxt": "^4.0.3"
+        "nuxt": "^4.0.3",
+        "tailwindcss": "^4.1.12",
+        "daisyui": "^5.1.5",
+        "@tailwindcss/vite": "^4.1.12"
     }
 }
