--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
         "dev:build": "nuxi build playground",
         "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
         "dev:storybook": "storybook dev -p 6006",
-        "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build",
+        "build": "npm run prepack",
+        "build:analyze": "npm run build && npm run bundle:analyze",
+        "bundle:analyze": "npx bundle-analyzer dist/",
+        "bundle:size": "npm run build && du -sh dist/",
         "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
@@ -48,10 +50,6 @@
         "test:ci": "npm run lint && npm run test:types:module && npm run test",
         "format": "prettier --write .",
         "format:check": "prettier --check .",
-        "build": "npm run prepack",
-        "build:analyze": "npm run build && npm run bundle:analyze",
-        "bundle:analyze": "npx bundle-analyzer dist/",
-        "bundle:size": "npm run build && du -sh dist/",
         "security:audit": "npm audit --audit-level moderate",
         "security:fix": "npm audit fix",
         "prepare:release": "npm run test:ci && npm run build && npm run security:audit",
@@ -60,7 +58,6 @@
         "docs:build": "cd playground && npm run generate",
         "docs:preview": "cd playground && npm run preview",
         "storybook:build": "storybook build",
-        "storybook:preview": "storybook dev -p 6006",
         "storybook:deploy": "npm run storybook:build && npm run docs:deploy:storybook",
         "storybook:deploy:script": "tsx scripts/deploy-storybook.ts",
         "docs:deploy:storybook": "gh-pages -d storybook-static -t true"
@@ -70,7 +67,6 @@
         "@vitejs/plugin-vue": "^6.0.1",
         "imask": "^7.6.1",
         "lucide-vue-next": "^0.542.0",
-        "prettier": "^3.6.2",
         "vee-validate": "^4.15.1",
         "yup": "^1.7.0"
     },
@@ -109,14 +105,16 @@
         "eslint": "^9.34.0",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-prettier": "^5.5.4",
-        "eslint-plugin-storybook": "9.1.4",
+        "eslint-plugin-storybook": "^9.1.4",
         "gh-pages": "^6.1.1",
         "happy-dom": "^18.0.1",
         "i18n-iso-countries": "^7.14.0",
         "libphonenumber-js": "^1.12.15",
         "nuxt": "^4.0.3",
+        "prettier": "^3.6.2",
         "storybook": "^9.1.4",
         "tailwindcss": "^4.1.12",
+        "tsx": "^4.19.2",
         "typescript": "~5.9.2",
         "vitest": "^3.2.4",
         "vue-tsc": "^3.0.6"
