--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -5,7 +5,7 @@ on:
         types: [opened, synchronize, reopened]
 
 env:
-    NODE_VERSION: '22.18.0'
+    NODE_VERSION: '22.20.0'
 
 jobs:
     pr-checks:
@@ -22,7 +22,7 @@ jobs:
                   cache: 'npm'
 
             - name: Install dependencies
-              run: npm ci
+              run: npm ci --prefer-online
 
             - name: Run linting
               run: npm run lint
