--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
                   cache: 'npm'
 
             - name: Install dependencies
-              run: npm ci
+              run: npm ci --prefer-online
 
             - name: Run all tests
               run: npm run test
@@ -70,7 +70,7 @@ jobs:
                   registry-url: ${{ env.REGISTRY_URL }}
 
             - name: Install dependencies
-              run: npm ci
+              run: npm ci --prefer-online
 
             - name: Build module
               run: npm run prepack
