--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "dist"
     ],
     "scripts": {
-        "prepack": "nuxt-module-build build",
+        "prepack": "node scripts/prepare-package.ts && nuxt-module-build build",
+        "postpack": "node scripts/post-package.ts",
         "dev": "npm run dev:prepare && nuxi dev playground",
         "dev:build": "nuxi build playground",
         "dev:prepare": "nuxt-module-build build --stub && nuxt-module-build prepare && nuxi prepare playground",
@@ -78,9 +79,9 @@
         "yup": "^1.7.0"
     },
     "peerDependencies": {
-        "tailwindcss": "^4.1.12",
+        "@tailwindcss/vite": "^4.1.12",
         "daisyui": "^5.1.5",
-        "@tailwindcss/vite": "^4.1.12"
+        "tailwindcss": "^4.1.12"
     },
     "peerDependenciesMeta": {
         "tailwindcss": {
@@ -105,7 +106,7 @@
         "@storybook/builder-vite": "^9.1.4",
         "@storybook/vue3-vite": "^9.1.4",
         "@tailwindcss/vite": "^4.1.12",
-        "@types/node": "latest",
+        "@types/node": "^24.7.0",
         "@vue/test-utils": "^2.4.6",
         "changelogen": "^0.6.2",
         "daisyui": "^5.1.5",
@@ -121,7 +122,7 @@
         "prettier": "^3.6.2",
         "storybook": "^9.1.4",
         "tailwindcss": "^4.1.12",
-        "tsx": "^4.19.2",
+        "tsx": "^4.20.6",
         "typescript": "~5.9.2",
         "vitest": "^3.2.4",
         "vue-tsc": "^3.0.6"
