--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
         "@storybook/vue3-vite": "^9.1.4",
         "@tailwindcss/vite": "^4.1.12",
         "@types/node": "^24.7.0",
+        "@vitest/coverage-v8": "^2.1.3",
         "@vue/test-utils": "^2.4.6",
         "changelogen": "^0.6.2",
         "daisyui": "^5.1.5",
