--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -29,7 +29,7 @@ jobs:
                   cache: 'npm'
 
             - name: Install dependencies
-              run: npm ci --prefer-online
+              run: npm install --prefer-online
 
             - name: Run unit tests
               run: npm run test:coverage
@@ -59,7 +59,7 @@ jobs:
                   cache: 'npm'
 
             - name: Install dependencies
-              run: npm ci --prefer-online
+              run: npm install --prefer-online
 
             - name: Prepare playground
               run: npm run dev:prepare
@@ -86,7 +86,7 @@ jobs:
                   cache: 'npm'
 
             - name: Install dependencies
-              run: npm ci --prefer-online
+              run: npm install --prefer-online
 
             - name: Run Storybook build test
               run: npm run storybook:build
@@ -116,7 +116,7 @@ jobs:
                   cache: 'npm'
 
             - name: Install dependencies
-              run: npm ci --prefer-online
+              run: npm install --prefer-online
 
             - name: Build for performance testing
               run: npm run prepack
