--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -29,7 +29,7 @@ jobs:
                   cache: 'npm'
 
             - name: Install dependencies
-              run: npm install --prefer-online
+              run: npm ci --prefer-online
 
             - name: Run unit tests
               run: npm run test
@@ -61,7 +61,7 @@ jobs:
                   cache: 'npm'
 
             - name: Install dependencies
-              run: npm install --prefer-online
+              run: npm ci --prefer-online
 
             - name: Prepare playground
               run: npm run dev:prepare
@@ -88,7 +88,7 @@ jobs:
                   cache: 'npm'
 
             - name: Install dependencies
-              run: npm install --prefer-online
+              run: npm ci --prefer-online
 
             - name: Run Storybook build test
               run: npm run storybook:build
@@ -118,7 +118,7 @@ jobs:
                   cache: 'npm'
 
             - name: Install dependencies
-              run: npm install --prefer-online
+              run: npm ci --prefer-online
 
             - name: Build for performance testing
               run: npm run prepack
