--- a/package.json
+++ b/package.json
@@ -80,7 +80,10 @@
     },
     "peerDependencies": {
         "@tailwindcss/vite": "^4.1.12",
+        "@tanstack/vue-table": "^8.0.0",
         "daisyui": "^5.2.0",
+        "fuse.js": "^7.0.0",
+        "pinia": "^2.2.0 || ^2.3.0",
         "tailwindcss": "^4.1.12"
     },
     "peerDependenciesMeta": {
@@ -92,6 +95,15 @@
         },
         "@tailwindcss/vite": {
             "optional": false
+        },
+        "@tanstack/vue-table": {
+            "optional": true
+        },
+        "fuse.js": {
+            "optional": true
+        },
+        "pinia": {
+            "optional": true
         }
     },
     "devDependencies": {
@@ -100,12 +112,14 @@
         "@nuxt/module-builder": "^1.0.2",
         "@nuxt/schema": "^4.1.2",
         "@nuxt/test-utils": "^3.19.2",
+        "@pinia/nuxt": "^0.9.0",
         "@storybook/addon-a11y": "^9.1.4",
         "@storybook/addon-docs": "^9.1.4",
         "@storybook/addon-links": "^9.1.4",
         "@storybook/builder-vite": "^9.1.4",
         "@storybook/vue3-vite": "^9.1.4",
         "@tailwindcss/vite": "^4.1.12",
+        "@tanstack/vue-table": "^8.0.0",
         "@types/node": "^24.7.0",
         "@vitest/coverage-v8": "^3.2.4",
         "@vue/test-utils": "^2.4.6",
@@ -115,11 +129,13 @@
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-prettier": "^5.5.4",
         "eslint-plugin-storybook": "^9.1.4",
+        "fuse.js": "^7.0.0",
         "gh-pages": "^6.1.1",
         "happy-dom": "^20.0.5",
         "i18n-iso-countries": "^7.14.0",
         "libphonenumber-js": "^1.12.15",
         "nuxt": "^4.1.2",
+        "pinia": "^2.3.0",
         "prettier": "^3.6.2",
         "storybook": "^9.1.4",
         "tailwindcss": "^4.1.12",
